# pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
backend-path = ["."]

[project]
name = "civitai-downloader"
version = "2.1.0"
description = "A script to download models from CivitAI using an API key."
requires-python = ">=3.8" # Specify the minimum Python version your script supports (adjust as needed)
dependencies = [
    "requests",
    "tqdm",
    "urllib3"
]

[project.authors]
name = "Jack Brooks"
email = "iresprite@gmail.com"

[project.urls]
"Homepage" = "https://github.com/iresprite/civitai-downloader"