# pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "civitai-downloader"
version = "2.1.0"
description = "A script to download models from CivitAI using an API key."
requires-python = ">=3.8"
dependencies = [
    "requests",
    "tqdm",
    "urllib3"
]
authors = [{name = "Jack Brooks",email = "iresprite@gmail.com" }]
urls = { "Homepage" = "https://github.com/iresprite/civitai-downloader" }
scripts = { civitai-dl = "download:main" }